src/unit_tests/CustCodeGeneration/success/bool.cl
class Main inherits IO {
    a : Bool;
    b : Bool <- new Bool;
    c : Bool <- true;

    main() : Int {1};
};