src/unit_tests/CustCodeGeneration/fail/case-err1.cl
class Main {
    x : A <- new A;
    main() : Int {{
        case x of
            x : Int => "fun";
        esac;
        1;
    }};
};

class A {};